syntax = "proto3";

package common;

message SemVer {
  uint64 major = 1;
  uint64 minor = 2;
  uint64 patch = 3;
}

message Dimension {
  uint64 width = 1;
  uint64 height = 2;
}

message Location {
  uint64 x_position = 1;
  uint64 y_position = 2;
}

enum Codec {
  CODEC_UNSPECIFIED = 0;
  CODEC_RAW = 1;
  CODEC_ZLIB = 2;
}

message ClientCaps { repeated Codec supported_codecs = 1; }

enum Cursor {
  CURSOR_UNSPECIFIED = 0;
  CURSOR_DEFAULT = 1;
  CURSOR_TEXT = 2;
  CURSOR_POINTER = 3;
  CURSOR_HELP = 4;
  CURSOR_PROGRESS = 5;
  CURSOR_WAIT = 6;
  CURSOR_COPY = 7;
  CURSOR_ALIAS = 8;
  CURSOR_NO_DROP = 9;
  CURSOR_NOT_ALLOWED = 10;
  CURSOR_ALL_SCROLL = 11;
  CURSOR_ROW_RESIZE = 12;
  CURSOR_COL_RESIZE = 13;
  CURSOR_E_RESIZE = 14;
  CURSOR_NE_RESIZE = 15;
  CURSOR_NW_RESIZE = 16;
  CURSOR_N_RESIZE = 17;
  CURSOR_SE_RESIZE = 18;
  CURSOR_SW_RESIZE = 19;
  CURSOR_S_RESIZE = 20;
  CURSOR_W_RESIZE = 21;
}

message CursorBitmap {
  Cursor cursor = 1;
  bytes data = 2;
}
